# risk_normalization

./: .gitignore  CAR25onCSV.py  Cargo.toml  README.md  generated_normal_trades.csv  make_trade_list.py  remove_best_and_worst_trades.csv  remove_single_worst_trade.csv  remove_worst_trades.csv  replicate_best_trades.csv  requirements.txt  risk_normalization.cpp  risk_normalization.py  trades_as_generated.csv
src/: lib.rs  main.rs  mainbackup.rs  utils.rs
src-tauri/src/: main.rs
src/calculations/: basic.rs  concurrent.rs  mod.rs
src/calcutions/: basic.rs  mod.rs
