[package]
name = "risk_normalization"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
rand = "0.8"
statrs = "0.17.1"
itertools = "0.10"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[lib]
name = "risk_normalization_lib"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"] # Optional: if you need dynamic linking

[features]
default = []